shell/iptables/iptables.conf
# Generated by iptables-save v1.4.21 on Thu Aug 14 00:42:36 2014
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
#-A PREROUTING -d 192.168.247.128/32 -p tcp -m tcp --dport 60000 -j REDIRECT --to 22
#-A PREROUTING -d 192.168.247.128/32 -p tcp -m tcp --dport 22 -j DNAT --to-destination 192.168.247.129:22
#-A POSTROUTING -d 192.168.247.129/32 -j SNAT --to-source 192.168.247.128
COMMIT
# Completed on Thu Aug 14 00:42:36 2014
# Generated by iptables-save v1.4.21 on Thu Aug 14 00:42:36 2014
*filter
:INPUT DROP [11:1352]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [6:400]
#-A INPUT -p icmp -j ACCEPT
-A INPUT -p icmp -m state --state ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
#-A INPUT -s 192.168.0.0/16 -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
#-A INPUT -s 192.168.0.0/16 -p tcp -m state --state ESTABLISHED -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp --dport 22 --syn -m recent --name ssh-connection --rcheck --seconds 60 --hitcount 3 -j LOG --log-prefix 'DDOS' --log-ip-options
-A INPUT -p tcp --dport 22 --syn -m recent --name ssh-connection --rcheck --seconds 180 --hitcount 3 -j DROP
-A INPUT -p tcp --dport 22 --syn -m recent --name ssh-connection --set -j ACCEPT
-A INPUT -p tcp --dport 22 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -d 192.168.247.128/32 -p tcp -m state --state NEW -m tcp --dport 873 -j ACCEPT
-A INPUT -d 192.168.247.128/32 -p tcp -m state --state ESTABLISHED -m tcp --dport 873 -j ACCEPT
-A INPUT -s 192.168.0.0/16 -p tcp -m state --state ESTABLISHED --dport 3306 -j ACCEPT
-A OUTPUT -p tcp -d 192.168.0.0/24 -m state --state ESTABLISHED,NEW -m tcp --dport 22 -j ACCEPT
-A OUTPUT -p tcp -d 192.168.0.0/24 -m state --state ESTABLISHED,NEW -m tcp --dport 873 -j ACCEPT
-A OUTPUT -p tcp -d 192.168.0.0/24 -m state --state ESTABLISHED,NEW -m tcp --dport 3306 -j ACCEPT
-A OUTPUT -p icmp -m state --state NEW,ESTABLISHED -j ACCEPT
#-A FORWARD -d 192.168.247.129/32 -j ACCEPT
COMMIT
# Completed on Thu Aug 14 00:42:37 2014
